// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemsTable expect to not render a loading state 1`] = `
<InventoryCmp
  items={Array []}
  onRefresh={[Function]}
  page={1}
  perPage={50}
  total={0}
  variant={null}
>
  <ToolbarGroup>
    <ToolbarItem
      style={
        Object {
          "marginLeft": "var(--pf-global--spacer--lg)",
        }
      }
    >
      <InputGroup>
        <SystemsComplianceFilter
          complianceScore={Array []}
          compliant={Array []}
          updateFilter={[Function]}
        />
        <SimpleFilter
          buttonTitle={null}
          className=""
          onButtonClick={[Function]}
          onFilterChange={[Function]}
          onOptionSelect={[Function]}
          placeholder="Search by name"
          searchIcon={true}
        />
      </InputGroup>
    </ToolbarItem>
    <ToolbarItem
      style={
        Object {
          "marginLeft": "var(--pf-global--spacer--lg)",
        }
      }
    >
      <Connect(Apollo(ComplianceRemediationButton)) />
    </ToolbarItem>
    <ToolbarItem
      style={
        Object {
          "marginLeft": "var(--pf-global--spacer--md)",
        }
      }
    >
      <Connect(DownloadTableButton) />
    </ToolbarItem>
  </ToolbarGroup>
</InventoryCmp>
`;

exports[`SystemsTable expect to render a loading state 1`] = `
<table
  aria-label="Loading"
  className="pf-c-table pf-m-grid-md"
  role="grid"
>
  <thead
    className=""
  >
    <tr>
      <th
        className=""
        data-key={0}
        data-label="column-0"
        scope="col"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__sm"
        >
           
        </div>
      </th>
      <th
        className=""
        data-key={1}
        data-label="column-1"
        scope="col"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__sm"
        >
           
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      hidden={false}
      onMouseDown={[Function]}
    >
      <td
        className=""
        data-key={0}
        data-label="column-0"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
      <td
        className=""
        data-key={1}
        data-label="column-1"
      >
        <div
          className="ins-c-skeleton ins-c-skeleton__md"
        >
           
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`SystemsTable expect to set loading state correctly on systemfetch 1`] = `
<mockConstructor
  items={
    Array [
      1,
    ]
  }
  onRefresh={[Function]}
  page={1}
  perPage={50}
  total={1}
  variant={null}
>
  <ToolbarGroup>
    <ToolbarItem
      style={
        Object {
          "marginLeft": "var(--pf-global--spacer--lg)",
        }
      }
    >
      <InputGroup>
        <SystemsComplianceFilter
          complianceScore={Array []}
          compliant={Array []}
          updateFilter={[Function]}
        />
        <SimpleFilter
          buttonTitle={null}
          className=""
          onButtonClick={[Function]}
          onFilterChange={[Function]}
          onOptionSelect={[Function]}
          placeholder="Search by name"
          searchIcon={true}
        />
      </InputGroup>
    </ToolbarItem>
    <ToolbarItem
      style={
        Object {
          "marginLeft": "var(--pf-global--spacer--lg)",
        }
      }
    >
      <Connect(Apollo(ComplianceRemediationButton)) />
    </ToolbarItem>
    <ToolbarItem
      style={
        Object {
          "marginLeft": "var(--pf-global--spacer--md)",
        }
      }
    >
      <Connect(DownloadTableButton) />
    </ToolbarItem>
  </ToolbarGroup>
</mockConstructor>
`;
